fix: text now visible on landing page

--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ nav a#pull {
 .about_text h4{
    font-family: 'Kreon', serif;
    font-size: 18px;
-   color: #57E0C4;
+   color: #ffffff;
    text-transform: capitalize;
 }
 .about_text p{
